Made search results row non-fluid until the alignment issue can be figured out later

--- a/app/assets/stylesheets/hydrant.css.less
+++ b/app/assets/stylesheets/hydrant.css.less
@@ -29,11 +29,8 @@ header .logo {
   height: 275px;
 }
 
-.search-result > .preview-image {
-  width: 100%;
+.search-result > img {
   text-align: center;
-  
-  height: auto;
   overflow: hidden;
 }
 
